<resources>
    <string name="app_name">EzApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_account">CreateAccount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userSession">MyPref</string>


    <string name="userName">userName</string>
    <string name="userPass">password</string>


    <string name="reset_password">If you do not receive an email</string>
    <string name="reset_password1"> Please call <u>1-877-976-8218</u></string>
    <string name="send_to_Email">Send To Email </string>
    <string name="profile">Profile </string>
    <string name="reviewtheinfo">Please Review The Information Below: </string>
    <string name="save">Save </string>
    <string name="filein">FILE EIN </string>
    <string name="login">Login </string>
    <string name="business_apps">Business Apps </string>

    <string name="fill_out_form">Please fill out the form below: </string>


    <string name="yesStr">Yes</string>
    <string name="createAccountText">"Please Review that you have submitted the correct e-mail address where you would like to receive your EIN.Upon completion of your application.Govt Assist will email the EIN Number to this email address?</string>
    <string name="SoleSpecialQuestion1">Does your business own a highway vehicle motor with a taxable gross weight of 55,0000 pounds or more?</string>

    <string name="Question1">1:Does your business own a highway vehicle motor with a taxable gross weight of 55,0000 pounds or more?</string>
    <string name="Question2">2:Does your business invlove gambling/wagering?</string>

    <string name="Question3">3:Does Your Business need to file from 720 (Quarterly Federal Excise Tax Return)? </string>

    <string name="Question4">4:Does Your Busciness sell or manufacture alcohal, tobacco or firearms?</string>

    <string name="Question5">5:Do you have, or do you expect to have any employees who will receive forms W-2 in the next 12 months? </string>

    <string name="secure_checkout">Secure Checkout</string>
    <string name="biz_milage">Biz Mileage </string>
    <string name="app_display_name">EZ FILING SERVICES</string>
    <string name="ein_num_text">EIN Number / Federal Tax ID Number</string>


    <string name="BusinessInfoCheckBox">Mailing Add different than Business Add ?</string>
    <string name="TrustInfoCheckBox">Is this Responsible Party an existing Bus ?</string>
    <string name="LisenceAgreementText">By checking this box (i) I represent and warrant that all the information provided above is accurate and complete; (ii) I agree that I have carefully read and agree to be bound by the (see below) and (iii) I have read and understand that I am hereby authorizing EIN Tax ID Filing Service as a "Third Party Designee" as described in the instructs to Form SS-4 to apply to the IRS for the Employer identification Number of the person or entity listed above, answer any questions on my behalf or the behalf of the entity listed above about the completed of Form SS-4, and to receive and deliver to me the Employer Identification Number for me or the entity listed above.</string>

    <string name="smart_swipe">Smart Swipe </string>
    <string name="long_text">Smart swipe app is the app to purchase application from a global platform </string>
    <string name="otherservices">Other Services</string>
    <string name="link">https:\\wwww.laseoservice.com</string>
    <string name="cellno">(310)566-4808</string>
    <string name="la_seo">LA SEO Service</string>
    <string name="merchant_account">Merchant Account Slution</string>
    <string name="invoices_unlimited">Invoices Unlimited</string>
    <string name="limited_liability_company">Limited Liability Company</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="reviewing_email">Please Review that you have submitted the correct email_address where you would like to
     receive your EIN. upon complition of your application, Govt Assis will Email the EIN number to this email address  </string>
    <string name="next">Next</string>
    <string name="llcinformation">LLC Information</string>
    <string name="busciness_add">Busciness Address (No Po Boxes)</string>
    <string name="busciness_started_acqired">Date Busciness Started or Acquired </string>
    <string name="closing_month_or_accounting_year">Closing Month or Accounting Year</string>
    <string name="additional_info">Additional Information</string>


    <string name="llc_special_Q">Has the applicant entity Over applied for and received an EIN?</string>
    <string name="llc_special_Q2">Do you have or do you expect to have any Employess who will receive Forms W-2 in the next twelve months?</string>


    <string name="special_Q_2_chkbox">Do you expect your Employment tax liability to be $1000 or less in a full Calendar year? </string>
    <string name="llc_managing_member_info">Managing Member Information </string>

    <string name="title_activity_drawer_">Drawer_Activity</string>


    <string name="navigation_item_viewProfile_txt">View Profile</string>
    <string name="navigation_item_dashBoard_txt">Dashboard</string>

    <string name="navigation_item_EinNumber_txt">EIN Number</string>
    <string name="navigation_item_BusinessApps_txt">Business Apps</string>
    <string name="navigation_item_Otherservices_txt">Other Services</string>
    <string name="navigation_item_logout_txt">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="choose_entity_type">Choose Entity Type</string>
    <string name="secure_checkout_txt1">Please Provide Payment Info Below for Your Federal Filing Fee</string>
    <string name="secure_checkout_txt2">$185.00 - 0 One Time Fedral Filling Fee for Standard Processing </string>
    <string name="secure_checkout_txt3">Your Text ID Number / EIN from the IRS and Additional Information will be E-mailed to You on The
    Same Busciness Day if Submitted Before 9pm EST. After 9pm EST, EINs will be Sent to You on The Next Busciness Day </string>

    <string name="or">-------------OR---------------</string>
    <string name="pay_pall_text">Click to Use PayPal for this Purchase. PayPal cannot be combined with a credit card payment</string>
    <string name="title_activity_nav__bar">Choose Entity Type</string>
</resources>
